# healthy-life

./: .gitignore  README.md  docker-compose.yml  test.rs  utilizable.markdown
backend/: .gitignore  Cargo.toml  Dockerfile
backend/nutrition_service/: Cargo.toml  Dockerfile  README.md  cargo.toml
backend/nutrition_service/data/: nutrition.db
backend/nutrition_service/src/: db.rs  google_sheets_client.rs  handlers.rs  main.rs  maintst.rs  models.rs  routes.rs
backend/nutrition_service/src/controller/: foods_controller.rs  fridge_items_controller.rs  mod.rs
backend/nutrition_service/src/handlers/: fridge_content_handler.rs
backend/nutrition_service/src/models/: fridge_item.rs  mod.rs
backend/nutrition_service/src/routes/: fridge_routes.rs
backend/nutrition_service/src/services/: db_services.rs  google_sheets_service.rs  mod.rs
backend/routes/src/: routes.rs
backend/src/: main.rs
devops/: Cargo.toml  Readme.md
devops/src/: main.rs  main2.rs  main3.rs
frontend/web/: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  cargo.toml  create_component.ps1  index.html  output.txt  styles.scss  versel.json  webpack.config.js
frontend/web/src/: lib.rs  main.rs
frontend/web/src/components/: card.rs  components.scss  home_page.rs  mod.rs  nav_bar.rs
frontend/web/src/components/card/: Card.html  card.scss  card_view.rs  mod.rs
frontend/web/src/components/fridge_content/: mod.rs
frontend/web/src/components/home_page/: HomePage.rs  HomePage.scss  home_page.html  home_page.rs  home_page.scss
frontend/web/src/components/nav_bar/: mod.rs  nav_bar.rs
frontend/web/src/screens/: mod.rs  screens.scss
frontend/web/src/screens/analysis-result/: analysis-result.html  analysis-result.rs  analysis-result.scss  mod.rs
frontend/web/src/screens/analysis_result/: analysis_result.html  analysis_result.rs  analysis_result.scss  mod.rs
frontend/web/src/screens/daily-menu/: daily-menu.html  daily-menu.rs  daily-menu.scss  mod.rs
frontend/web/src/screens/daily_menu/: daily_menu.html  daily_menu.rs  daily_menu.scss  mod.rs
frontend/web/src/screens/fridge-content/: fridge-content.html  fridge-content.rs  fridge-content.scss  mod.rs
frontend/web/src/screens/fridge_content/: fridge_content.html  fridge_content.scss  fridge_content_view.rs  mod.rs
frontend/web/src/screens/fridge_crud/: fridge_crud.html  fridge_crud.rs  (+2 more)
frontend/web/static/styles/: _globals.scss  _mixins.scss  _typography.scss  _variables.scss  index.scss
(+71 files in other folders)
