[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
redis = "0.27.6"
anyhow = "1.0.94"
tracing = "0.1.41"
tracing-subscriber = "0.3"
tokio = "1.42.0"

