[package]
name = "nutrition_service"
version = "0.2.1"
edition = "2021"

[dependencies]
#REST endpoint ve HTTP sunucu oluşturmada yaygın ve güçlü bir kütüphanedir.
actix-web = "4"
#JSON formatında veri alma/gönderme (serialization/deserialization) işlemleri.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
#Servis log’larını tutmak için.
log = "0.4"
env_logger = "0.11"
#Actix-web asenkron yapısını yürütür
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
#Postgresql için asenktron ORM tercihi
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
actix-cors = "0.6"